package gameLaby.laby;

/**
 * Classe représentant la sortie du labyrinthe
 */
public class Sortie extends Element{
    /**
     * constructeur
     *
     * @param x position selon x
     * @param y position selon y
     */
    public Sortie(int x, int y) {
        super(x,y);
    }
}
